--- a/032/style.css
+++ b/032/style.css
@@ -13,4 +13,19 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    border-radius: 7px;
+}
+
+.press{
+    background-color: #1a1a1a;
+    color: white;
+    width: 300px;
+    height: 50px;
+    font-size: 25px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
 }
